--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
   <!-- Footer Design -->
   <footer class="footer">
     <div class="footer-text">
-        <p>Copyright &copy; 2023 by Vedant Raut | All Rights Reserved.</p>
+        <p>Copyright © <%= new Date().getFullYear() %>
     </div>
     <div class="footer-iconTop">
         <a href="#"><i class='bx bx-up-arrow-alt'></i></a>
